test/core/errors/templates_error/zs/missing_template_arguments_error.zs
package missing_template_arguments_error;

struct TestStruct<T>
{
    T value;
};

struct MissingTemplateArgument
{
    TestStruct test;
};
